# rusty-twitter-bot

./: .gitignore  Cargo.toml
src/: main.rs  scryfall.rs  twitter.rs
