[package]
name = "twartbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.14.0"
aws-sdk-ssm = "0.14.0"
base64 = "0.13.0"
reqwest-oauth1 = "0.2.1"
